--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,23 @@ body {
   padding: 0;
   margin: 0;
 }
-html, body, #map {
+#map {
   height: 100%;
   width: 100%;
+  z-index: 0
+}
+
+.lot-info {
+  position: absolute;
+  font-family: sans-serif;
+  margin-top: 5px;
+  margin-left: 5px;
+  padding: 5px;
+  width: 30%;
+  border: 2px solid black;
+  font-size: 14px;
+  color: #222;
+  background-color: #fff;
+  border-radius: 3px;
+  z-index: 1
 }
